Updated Kubernetes and added new deploy file for appsmith

--- a/Kubernetes/kubernetes.yaml
+++ b/Kubernetes/kubernetes.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: career-app
+  name: MuseCareer
   labels:
-    name: career-app
+    name: MuseCareer
     purpose: capstone-project
