--- a/Kubernetes/secrets.yaml
+++ b/Kubernetes/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: api-keys
-  namespace: career-app
+  namespace: MuseCareer
 type: Opaque
 stringData:
-  gemini-api-key: "GEMINI_API_KEY=AIzaSyCKdT-MswgVQOi7qeG0t3DlcN9PoHmOr_w"
+  gemini-api-key: "AIzaSyCKdT-MswgVQOi7qeG0t3DlcN9PoHmOr_w"
