Completed Docker work

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: docker.io/boikanyomz/musecareer-backend:YOUR_TAG
+        image: docker.io/boikanyomz/musecareer-backend:b05c278
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
